display route and directions

--- a/override.css
+++ b/override.css
@@ -6,3 +6,11 @@
     left: 10px; 
     z-index: 999;
 }
+
+#display-directions {
+    position:fixed; 
+    bottom: 20px; 
+    right: 10px; 
+    z-index: 999;
+    background-color: white;
+}
