--- a/override.css
+++ b/override.css
@@ -1,5 +1,3 @@
-#map {position: absolute; top: 0; right: 0; bottom: 0; left: 0;}
-
 #route-input {
     position:fixed; 
     top: 90px; 
@@ -14,4 +12,40 @@
     z-index: 999;
     background-color: white;
     max-width: 33vw;
+}
+
+nav {height: 10vh;}
+
+aside {
+    background-color: #aaaaaa;
+    height: 90vh;
+}
+
+main {
+    height: 90vh;
+}
+
+#input-overlay {
+    position: absolute;
+    top: calc(10vh + 32px);
+    left: 70px;
+    z-index: 999;
+}
+
+.leaflet-control-zoom {
+    position: fixed;
+    bottom: 32px;
+    right: 24px;
+}
+
+.leaflet-control-layers-overlays > label {padding: 5px 0;}
+
+.layer-key > img {margin: 0 5px;}
+
+#start-building, #end-building {
+    width: 200px;
+}
+
+#start-floor, #end-floor {
+    width: 115px;
 }
