--- a/override.css
+++ b/override.css
@@ -1,6 +1,7 @@
 html {
     max-width: 100vw;
     overflow-x: hidden;
+    font-family: 'proxima-nova', Arial, Helvetica, sans-serif
 }
 
 #route-input {
@@ -19,6 +20,11 @@ html {
     width: 100vw;
 }
 
+.nav-link.active {
+    color: #283FAF;
+    border-bottom: 2px solid #283FAF;
+}
+
 aside {
     height: 90vh;
 }
@@ -34,7 +40,7 @@ aside {
 
 #route-input {
     background-color: #00205B;
-    width: 25vw;
+    width: calc(25vw + 10px);
     position: fixed;
     top: 10vh;
     left: 0;
@@ -112,6 +118,8 @@ h3 {
 }
 
 main {
+    position: relative;
+    top: 10vh;
     height: 90vh;
 }
 
@@ -161,6 +169,20 @@ footer {
     padding: 5px 0;
 }
 
+#service-form-container > h1 {
+    width: 100vw;
+    background-color: #00205B;
+    color: #ffffff;
+    padding: 15px 0;
+    text-align: center;
+    position: fixed;
+    top: 10vh;
+    left: 0;
+    z-index: 999;
+}
+
+#service-form-container > p:first-of-type {margin-top: 30vh;}
+
 #report-form {
     border: 1px solid #363636;
     border-radius: 5px;
@@ -194,6 +216,12 @@ footer {
     color: #363636;
 }
 
+.btn-secondary a {
+    color: #363636;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 .btn-light {
     background-color: #D8D8D8;
     color: #363636;
@@ -207,4 +235,26 @@ footer {
 
 .btn-light.active:focus {
     box-shadow: none;
+}
+
+#banner-slides {
+    margin-top: 10vh;
+}
+
+.carousel-caption {
+    background-color: #00205BD9;
+    position: absolute;
+    left: 10vw;
+    top: calc(100vw / 7);
+    max-width: 350px;
+    height: fit-content;
+    font-family: 'proxima-nova', Arial, Helvetica, sans-serif;
+    padding: 20px;
+}
+
+.carousel-caption h2 {text-align: left;}
+
+.carousel-caption button {
+    position: relative;
+    right: 100px;
 }
