--- a/override.css
+++ b/override.css
@@ -1,7 +1,12 @@
 html {
     max-width: 100vw;
     overflow-x: hidden;
-    font-family: 'proxima-nova', Arial, Helvetica, sans-serif
+    font-family: 'proxima-nova', Arial, Helvetica, sans-serif;
+}
+
+html {
+    max-width: 90vw;
+    overflow-y: hidden;
 }
 
 #route-input {
@@ -55,6 +60,13 @@ aside {
     z-index: 990;
     align-items: center;
     justify-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+#route-input img {
+    width: 48px;
 }
 
 #sidebar h2 {
@@ -125,8 +137,10 @@ h3 {
 }
 
 main {
-    position: relative;
+    position: fixed;
+    left: 25vw;
     top: 10vh;
+    width: 75vw;
     height: 90vh;
 }
 
@@ -279,7 +293,44 @@ footer {
 
 .card {width: 22vw;}
 
+@media screen and (max-width: 1150px) {
+    /*accessibility map sidebar*/
+    main {
+        width: 67vw;
+        left: 33vw;
+    }
+    #sidebar, #sidebar-container, #route-input {width: 33vw;}
+}
+
 @media screen and (max-width: 900px) {
+    /*accessibility map sidebar*/
+    main, #map {
+        width: 100vw;
+        height: 65vh;
+        position: absolute;
+        top: 25vh;
+        left: 0;
+    }
+    
+    #sidebar, #sidebar-container, #route-input {width: 100vw;}
+
+   #sidebar-container {
+        position: absolute;
+        top: 10vh;
+        left: 0;
+        top: 10vh;
+    }
+
+    #route-input {
+        position: fixed;
+        top: 10vh;
+        left: 0;
+        width: calc(100vw + 12px);
+        height: 15vh;
+    }
+
+    #input-fields {width: 65%;}
+
     /*service request form page*/
     #request-instructions {margin-top: 23vh;}
 
@@ -312,4 +363,9 @@ footer {
     #start-floor-overlay, #end-floor-overlay {
         width: 80px;
     }
+}
+
+@media screen and (max-width: 500px) {
+    /*accessibility map sidebar*/
+    #input-fields {width: 75%;}
 }
