--- a/override.css
+++ b/override.css
@@ -76,6 +76,15 @@ aside {
     height: calc(90vh - 100px);
 }
 
+#info-header {
+    display: flex;
+}
+
+#info-header img {
+    visibility: hidden;
+    display: none;
+}
+
 #sidebar h2 {
     font-weight: 700;
     padding-left: 20px;
@@ -127,7 +136,7 @@ h3 {
 #find-route {
     width: 15vw;
     position: relative;
-    top: calc(90vh - 80px);
+    top: calc(92vh - 80px);
     margin: 0 5vw;
     background-color: #FFC70A;
     color: #363636;
@@ -136,7 +145,7 @@ h3 {
 #finish-route {
     width: 7vw;
     position: relative;
-    top: calc(90vh - 80px);
+    top: calc(92vh - 80px);
     left: 16vw;
     background-color: #283FAF;
     color: #f8f9fa;
@@ -349,6 +358,11 @@ footer {
         margin: 20px 20%;
     }
 
+    #info-header img {
+        visibility: visible;
+        display: block;
+    }
+
     #finish-route, #find-route {
         left: 50%;
         width: 10%;
@@ -407,7 +421,6 @@ footer {
     #input-fields {width: 75%;}
 
     #route-info {
-        top: 80vh;
         width: 80%;
         margin: 10px 10% 20px;
     }
