--- a/override.css
+++ b/override.css
@@ -116,17 +116,17 @@ h3 {
 }
 
 #directions-container {
-    position: relative;
-    top: calc(140px + 10vh);
+    position: absolute;
+    top: calc(10vh);
     left: 30px;
 }
 
 #directions {
     list-style: none;
     padding-left: 0;
-    height: 34vh;
+    height: 29vh;
     overflow-y: scroll;
-    width: 20vw;
+    width: 22vw;
 }
 
 #directions li {
