--- a/override.css
+++ b/override.css
@@ -6,7 +6,6 @@ html {
 
 html {
     max-width: 90vw;
-    overflow-y: hidden;
 }
 
 #route-input {
@@ -244,7 +243,7 @@ footer {
     background-color: #283FAF;
     color: #f8f9fa;
     position: relative;
-    left: 90%;
+    left: 80%;
 }
 
 .summary-input {font-weight: bold;}
@@ -431,5 +430,9 @@ footer {
 
     #finish-route, #find-route {
         left: 75%;
+    }
+
+    #submit-report {
+        left: 70%;
     }
 }
