--- a/override.css
+++ b/override.css
@@ -77,6 +77,7 @@ aside {
 
 #info-header {
     display: flex;
+    margin-bottom: 10px;
 }
 
 #info-header img {
@@ -126,7 +127,7 @@ h3 {
 
 #directions-container {
     position: absolute;
-    top: calc(10vh);
+    top: 10vh;
     left: 15px;
 }
 
@@ -138,8 +139,8 @@ h3 {
 
 #directions {
     list-style: none;
-    padding-left: 0;
-    height: 27vh;
+    padding: 0 10px 75px 0;
+    height: 50vh;
     overflow-y: scroll;
     width: 22vw;
 }
@@ -155,6 +156,7 @@ h3 {
     margin: 0 5vw;
     background-color: #FFC70A;
     color: #363636;
+    z-index: 995;
 }
 
 #finish-route {
@@ -164,6 +166,7 @@ h3 {
     left: 16vw;
     background-color: #283FAF;
     color: #f8f9fa;
+    z-index: 995;
 }
 
 main.overlay-map {
@@ -374,10 +377,8 @@ footer {
 
     #route-info {
         top: 70vh;
-        width: 60%;
+        width: 70%;
         margin: 20px 20%;
-        height: 25vh;
-        overflow-y: scroll;
         padding-bottom: 20vh;
     }
 
@@ -429,7 +430,7 @@ footer {
 
     /* route info bottom bar*/
     #route-info {
-        width: 70%;
+        width: 80%;
         margin: 10px 15% 20px;
     }
 
@@ -452,7 +453,7 @@ footer {
     #input-fields {width: 75%;}
 
     #route-info {
-        width: 80%;
+        width: 85%;
         margin: 10px 10% 20px;
     }
 
