--- a/override.css
+++ b/override.css
@@ -268,6 +268,8 @@ footer {
 
 .summary-input {font-weight: bold;}
 
+.btn {min-height: 40px;}
+
 .btn-primary {
     background-color: #283FAF;
     color: #f8f9fa;
