--- a/override.css
+++ b/override.css
@@ -32,10 +32,52 @@ html,body{
     padding: 0 50px;
 }
 
+.nav-item {margin: 0 20px;}
+
 .nav-link.active {
     color: #283FAF !important;
     border-bottom: 2px solid #283FAF;
 }
+
+#banner {
+    overflow-x: hidden;
+    max-width: 100vw;
+}
+
+#banner img {
+    min-height: 63vh;
+    max-height: 63vh;
+    overflow-y: hidden;
+    min-width: 100vw;
+    width: auto;
+    margin-top: 22vh;
+    float: inline-end;
+}
+
+#banner h2 {
+    width: 100vw;
+    height: 15vh;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    margin-bottom: 0;
+    background-color: #00205B;
+    text-align: center;
+    padding-top: 4vh;
+    color: #f8f9fa;
+}
+
+#link-buttons {
+    width: 80vw;
+    display: flex;
+    position: fixed;
+    bottom: 20vh;
+    left: 10vw;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#link-buttons a {padding: 18px 50px;}
 
 aside {
     height: 90vh;
@@ -360,6 +402,18 @@ footer {
         top: 25vh;
         left: 0 !important;
     }
+
+    #link-buttons {
+        width: 100vw;
+        display: flex;
+        position: fixed;
+        bottom: 20vh;
+        left: 0;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    #link-buttons a {padding: 18px;}
     
     #sidebar, #sidebar-container, #route-input {width: 100vw;}
 
@@ -420,6 +474,42 @@ footer {
 
     .nav-link {padding-top: 20px;}
 
+    /*homepage*/
+    #banner img {
+        min-height: 35vh;
+        max-height: 35vh;
+        overflow-y: hidden;
+        min-width: 100vw;
+        width: auto;
+        margin-top: 18vh;
+        float: inline-end;
+    }
+
+    #banner h2 {
+        height: 10vh;
+        position: fixed;
+        top: 52vh;
+        text-align: left;
+        padding-top: 3vh;
+        padding-left: 5vw;
+    }
+
+    #link-buttons {
+        width: 100vw;
+        height: 35vh;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        bottom: 2vh;
+        left: 0;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    #link-buttons a {
+        width: 80vw;
+    }
+
     /*route input overlay*/
     #input-overlay {
         width: 70%;
@@ -460,6 +550,10 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
+    #banner h2 {
+        padding-top: 1vh;
+    }
+
     /*accessibility map sidebar*/
     #input-fields {width: 75%;}
 
