--- a/override.css
+++ b/override.css
@@ -9,6 +9,15 @@ html,body{
     overflow: auto !important;
 }
 
+.skip {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+  }
+
 #route-input {
     position:fixed; 
     top: 90px; 
