--- a/override.css
+++ b/override.css
@@ -131,6 +131,9 @@ aside {
     position: absolute;
     top: 165px;
     height: calc(100vh - 165px);
+    padding-bottom: 30vh;
+    max-height: calc(100vh - 165px);
+    overflow-y: scroll;
 }
 
 #close-info {
@@ -475,9 +478,9 @@ footer {
     /*accessibility map sidebar*/
     main {
         width: 100vw !important;
-        height: 68vh;
+        height: calc(100vh - 210px);
         position: absolute;
-        top: 32vh;
+        top: 210px;
         left: 0 !important;
     }
     
@@ -494,7 +497,7 @@ footer {
         top: 55px;
         left: 0;
         width: calc(100vw + 12px);
-        height: 22vh;
+        height: 155px;
     }
 
     #route-input img {padding-bottom: 6vh;}
@@ -511,16 +514,18 @@ footer {
 
     #close-info {
         position: fixed;
-        top: 34vh;
+        top: 230px;
         right: 7vw;
         visibility: visible;
     }
 
     #route-info {
-        top: 110px;
+        top: 140px;
         width: 100vw;
         margin: 0;
         padding-bottom: 20vh;
+        max-height: calc(100vh - 140px);
+        overflow-y: scroll;
     }
 
     #info-header, #access-features {
@@ -530,11 +535,11 @@ footer {
     }
 
     #finish-route, #find-route {
-        height: 50px;
+        height: 45px;
         width: 33%;
         position: fixed;
         left: 33%;
-        top: 135px;
+        top: 160px;
         min-width: 60px;
         visibility: visible;
     }
@@ -553,7 +558,7 @@ footer {
     #input-bar img {padding: 3px 0;}
     
     #current-dir-box {
-        height: calc(22vh - 30px);
+        height: 175px;
         width: 100vw;
     }
     
@@ -566,16 +571,16 @@ footer {
     }
     
     #directions-container {
-        top: 34vh;
+        top: 250px;
         width: 100vw;
         padding: 5px 20px;
-        height: 55vh;
+        height: calc(100vh - 250px);
         overflow-y: scroll;
     }
     
     #finish-route {
         height: 30px;
-        top: 135px;
+        top: 160px;
     }
 }
 
