--- a/override.css
+++ b/override.css
@@ -48,6 +48,12 @@ html,body{
     border-bottom: 2px solid #283FAF;
 }
 
+.img-btn {
+    background: none;
+    border: none;
+    padding: 0;
+}
+
 #banner {
     overflow-x: hidden;
     max-width: 100vw;
